Añado target='_blank' a los href

--- a/GitHubHowTo.html
+++ b/GitHubHowTo.html
@@ -13,7 +13,8 @@
 			<li><a>Navegar hasta el directorio donde quieras descargar el repo (cd)</a></li>
 		</ul>
        <h4><code>git clone https://github.com/mariasanchezc/angular-coursera.git</code></h4>
-	   <h4>Editas lo que quieras en el editor que prefieras (atom, brackets, sublime, visual studio, etc.)</h4>
+	   <h4>Editas lo que quieras en el editor que prefieras (<a href="https://atom.io/" target="_blank">atom</a>, 
+			<a href="http://brackets.io/" target="_blank">brackets</a>, <a href="https://www.sublimetext.com/" target="_blank">sublime text</a>, <a href="https://code.visualstudio.com/" target="_blank">visual studio</a>, etc.)</h4>
        <h4>Te puedes ayudar de browser-sync para visualizar en tiempo real los cambios que le hagas al html</h4>
        <h4><code>browser-sync start --server --directory --files "**/*"</code></h4>
 	   <h4>Comando de git:</h4>
